Data gen tweaks